Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ steps:
 
 - task: CmdLine@2
   inputs:
-    script: 'echo $(Your-Secret-Name) > secret.txt'
+    script: 'echo $(DatabasePassword) > secret.txt'
 
 - task: CopyFiles@2
   inputs:
