Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,7 @@ pool:
 
 steps:
 - task: AzureKeyVault@2
+  displayName: Get Secrets from Key Vault
   inputs:
     azureSubscription: 'spn-keyvault-devops'
     KeyVaultName: 'keyvault019'
@@ -13,15 +14,20 @@ steps:
     RunAsPreJob: false
 
 - task: CmdLine@2
+  displayName: Write Secret into File
   inputs:
-    script: 'echo $(DatabasePassword) > secret.txt'
+    script: |
+      echo $(DatabasePassword) > secret.txt
+      cat secret.txt
 
 - task: CopyFiles@2
+  displayName: Copy Secrets File
   inputs:
     Contents: secret.txt
     targetFolder: '$(Build.ArtifactStagingDirectory)'
 
 - task: PublishBuildArtifacts@1
+  displayName: Publish Secrets File
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
