Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,7 @@ steps:
   displayName: Write Secret into File
   inputs:
     script: |
+      echo $(DatabasePassword)
       echo $(DatabasePassword) > secret.txt
       cat secret.txt
 
